applications/holdings-ui/overlays/prod/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holdings-ui
spec:
  template:
    spec:
      containers:
        - name: app
          resources:
            requests: {cpu: 200m, memory: 256Mi}
            limits:   {cpu: 500m, memory: 512Mi}
